<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Ques1"/>

        <EditText
            android:id="@+id/Edit1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ques2"/>

        <RadioGroup
            android:id="@+id/rGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp">
            <RadioButton
                android:id="@+id/rButton2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Argon" />

            <RadioButton
                android:id="@+id/rButton2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chlorine" />

            <RadioButton
                android:id="@+id/rButton2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Helium" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Ques3" />


        <CheckBox
            android:id="@+id/cBox3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="Protium" />
        <CheckBox
            android:id="@+id/cBox3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="Deuterium" />
        <CheckBox
            android:id="@+id/cBox3_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="Tritum" />
        <CheckBox
            android:id="@+id/cBox3_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="None of these" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/Ques4" />

        <EditText
            android:id="@+id/Edit2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Ques5" />

        <EditText
            android:id="@+id/Edit3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Ques6" />

        <EditText
            android:id="@+id/Edit4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Ques7" />

        <EditText
            android:id="@+id/Edit5"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Ques8" />

        <RadioGroup
            android:id="@+id/Rgroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp">
            <RadioButton
                android:id="@+id/rButton8_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bromine" />

            <RadioButton
                android:id="@+id/rButton8_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Magnesium" />

            <RadioButton
                android:id="@+id/rButton8_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mercury" />
        </RadioGroup>
        <!--This button will show answers-->
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Submit" />

        <!-- This button  clear up all the responses -->

        <Button
            android:id="@+id/clearall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClear"
            android:text="Clear All" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="Correct: 0"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/wrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:text="Wrong: 0"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>